syntax = "proto3";
package BBSerializer;

message BBHierarchyTreeWidgetItem
{
    optional int32 index = 1;

    repeated int32 children = 2;
}